--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing-page-project",
+  "name": "landing-page-lyatom",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
